Adds /banip, fixes /ban message bugs