@@ -1,5 +1,6 @@
 package creativitium.revolution.administration.commands;
 
+import com.google.common.net.InetAddresses;
 import creativitium.revolution.administration.Administration;
 import creativitium.revolution.administration.data.Ban;
 import creativitium.revolution.foundation.Foundation;
@@ -11,42 +12,40 @@ import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.bukkit.OfflinePlayer;
+import org.bukkit.Bukkit;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.Plugin;
-import org.jetbrains.annotations.Nullable;
 
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.Collections;
+import java.util.UUID;
 
-@CommandParameters(name = "ban",
-        description = "Ban a player.",
-        usage = "/ban <player> [reason]",
-        aliases = {"gtfo"},
-        permission = "administration.command.ban",
+@CommandParameters(name = "banip",
+        description = "Ban an IP address from the server.",
+        usage = "/banip <ip> [reason]",
+        aliases = {"ban-ip"},
+        permission = "administration.command.banip",
         source = SourceType.BOTH)
-public class Command_ban extends RCommand
+public class Command_banip extends RCommand
 {
     @Override
     public boolean run(CommandSender sender, Player playerSender, String commandLabel, String[] args)
     {
         if (args.length == 0) return false;
+        final String ipAddress = args[0].trim();
+        final String reason = args.length > 1 ? StringUtils.join(ArrayUtils.remove(args, 0), " ") : null;
 
-        final OfflinePlayer player = getOfflinePlayer(args[0]);
-        if (!player.hasPlayedBefore())
+        if (!InetAddresses.isInetAddress(ipAddress))
         {
-            msg(sender, "revolution.command.error.player_not_found");
+            msg(sender, "administration.command.banip.invalid_ip_address");
             return true;
         }
 
-        final String reason = args.length > 1 ? StringUtils.join(ArrayUtils.remove(args, 0), " ") : null;
-
         final Ban ban = Ban.builder()
-                .username(player.getName())
-                .uuid(player.getUniqueId())
-                .ips(player.isOnline() ? List.of(player.getPlayer().getAddress().getAddress().getHostAddress()) : new ArrayList<>())
+                .username(null)
+                .uuid(UUID.nameUUIDFromBytes(ipAddress.getBytes()))
+                .ips(Collections.singletonList(ipAddress))
                 .issued(Instant.now().getEpochSecond())
                 .reason(reason)
                 .by(sender.getName())
@@ -55,21 +54,13 @@ public class Command_ban extends RCommand
 
         Administration.getInstance().getBanService().addEntry(ban);
 
-        action(sender, "administration.action.ban", Placeholder.unparsed("player", player.getName()),
-                Placeholder.component("reason", reason != null ? Foundation.getInstance().getMessageService().getMessage("administration.action.ban.reason", Placeholder.unparsed("reason", reason)) : Component.empty()));
+        action(sender, "administration.action.banip", Placeholder.unparsed("ip", ipAddress.trim()),
+                Placeholder.component("reason", reason != null ? Foundation.getInstance().getMessageService().getMessage("administration.action.banip.reason", Placeholder.unparsed("reason", reason)) : Component.empty()));
 
-        if (player.isOnline())
-        {
-            player.getPlayer().kick(ban.craftBanMessage());
-        }
+        Bukkit.getOnlinePlayers().stream().filter(player -> player.getAddress().getAddress().getHostAddress().equalsIgnoreCase(ipAddress)).forEach(player ->
+                player.kick(ban.craftBanMessage()));
 
         return true;
-    }
-
-    @Override
-    public @Nullable List<String> tabCompleteOptions(CommandSender sender, Player playerSender, String commandLabel, String[] args)
-    {
-        return args.length == 1 ? match(getOnlinePlayers(), args[0]) : null;
     }
 
     @Override
